--- a/pages/index.html
+++ b/pages/index.html
@@ -15,8 +15,8 @@
         </div>
     </header>
     <main class="container my-5">
+        <!-- CRUD -->
         <section class="crud-section mb-5">
-            <!-- CRUD -->
             <article class="mb-5">
                 <h2 class="mb-2">Criar / Editar Post</h2>
                 <form id="postForm">
@@ -29,7 +29,7 @@
                 </form>
             </article>
 
-            <article id="listaPosts" class="d-flex flex-column gap-4 mt-5">
+            <article id="listaPosts" class="listaPosts d-flex flex-column gap-4 mt-5">
                 <!-- Posts -->
             </article>
         </section>
