cancelar edicao implementado

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,6 +25,7 @@
                         <textarea name="mensagem" class="form-control" rows="2" required></textarea>
                     </div>
                     <button name="salvar_post" type="submit" class="btn btn-success">Salvar Post</button>
+                    <button name="cancelar_edicao" type="submit" class="btn btn-danger" style="display: none;">Cancelar edição</button>
                 </form>
             </article>
 
